Fixed layout and spacing between main menu and list notes

--- a/lambdanotes/src/App.css
+++ b/lambdanotes/src/App.css
@@ -6,3 +6,7 @@
 .App_mainmenu_col {
   /*max-width: 21%;*/
 }
+.container {
+    height: 100%;
+    width: 100%;
+}
