--- a/lambdanotes/src/components/MainMenu/MainMenu.css
+++ b/lambdanotes/src/components/MainMenu/MainMenu.css
@@ -1,10 +1,11 @@
 .MainMenu {
-    width: 275px;
+    width: 340px;
     height: 100%;
     background-color: #D7D7D7;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 0;
 
 }
 
