--- a/lambdanotes/src/components/Notes/NoteCard.css
+++ b/lambdanotes/src/components/Notes/NoteCard.css
@@ -14,4 +14,5 @@
 .NoteCardList__holder {
     background-color: #F3F3F3;
     width: 800px;
+    padding: 0 0;
 }
